# docs/swagger.yaml
@@ -68,6 +68,35 @@ definitions:
       userId:
         type: integer
     type: object
+  notify.SendInfo:
+    properties:
+      link:
+        description: 点击跳转链接
+        type: string
+      msg:
+        description: 要发送的消息
+        type: string
+      msgType:
+        description: 消息类型：图文，markdown，文字
+        type: string
+      platform:
+        description: 发送到哪个平台
+        type: string
+      pngLink:
+        description: 消息图片链接
+        type: string
+      title:
+        description: 标题
+        type: string
+      titleColor:
+        description: 标题颜色
+        type: string
+      users:
+        description: 发送给谁
+        items:
+          type: string
+        type: array
+    type: object
 info:
   contact: {}
 paths:
@@ -897,7 +926,7 @@ paths:
       summary: get user profile
       tags:
       - user
-  /accounts/{tenant}/message/{providerId}:
+  /accounts/{tenant}/message/{provider}:
     get:
       description: send message
       parameters:
@@ -906,11 +935,17 @@ paths:
         name: tenant
         required: true
         type: string
-      - description: provider id
+      - description: provider name
         in: path
         name: providerId
         required: true
         type: string
+      - description: msg body
+        in: body
+        name: by
+        required: true
+        schema:
+          $ref: '#/definitions/notify.SendInfo'
       responses:
         "200":
           description: OK
